# Bsdiff-Android-Library

./: .gitignore  README.md  README_en.md  build.gradle.kts  jitpack.yml  settings.gradle.kts
core/: build.gradle.kts
core/src/androidTest/java/com/bsdiff/core/: ExampleInstrumentedTest.kt
core/src/main/cpp/: main.h  native-lib.c
core/src/main/cpp/bsdiff/: bsdiff.c
download/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libBsdiff/: build.gradle.kts
libBsdiff/src/main/cpp/: CMakeLists.txt  main.c  native-lib.c
libBsdiff/src/main/cpp/bspatch/: bspatch.c
networkTestApp/: build.gradle.kts
networkTestApp/release/: output-metadata.json
networkTestApp/release/baselineProfiles/0/: networkTestApp-release.dm
networkTestApp/release/baselineProfiles/1/: networkTestApp-release.dm
networkTestApp/src/main/: AndroidManifest.xml
networkTestApp/src/main/res/values/: strings.xml  themes.xml
networkTestApp/src/main/res/xml/: file_paths.xml
patch/: .gitignore  build.gradle.kts
patch-meta/: build.gradle.kts
patch/src/main/cpp/: native-lib.c
patch/src/main/cpp/bzip/: bzlib.c
scripts/: accept-licenses.sh
shared/: build.gradle.kts
testApp/: build.gradle.kts
testApp/release/: output-metadata.json
testApp/release/baselineProfiles/0/: testapp-release.dm
testApp/release/baselineProfiles/1/: testapp-release.dm
testApp/src/main/: AndroidManifest.xml
testApp/src/main/res/xml/: file_paths.xml
testapp/release/: output-metadata.json
testapp/src/main/: AndroidManifest.xml
(+100 files in other folders)
